--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/onibinho.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Academic Transport Management</title>
-    <meta name="description" content="Complete transport management system for academic institutions. Manage routes, students, payments, and schedules efficiently.">
+    <meta name="description" content="Complete transport management system for academic institutions. Manage routes, students, payments, and schedules efficiently.">                                               
     <meta name="theme-color" content="#1565C0">
   </head>
   <body>
